<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="250dp"
        android:layout_height="350dp" >

        <EditText
            android:id="@+id/updateUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:ems="16"
            android:maxLength="20"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/updateEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="75dp"
            android:ems="16"
            android:maxLength="50"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/updatePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="135dp"
            android:ems="16"
            android:maxLength="20"
            android:hint="@string/phone" />

        <EditText
            android:id="@+id/updateFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="195dp"
            android:ems="16"
            android:maxLength="20"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/updateLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="255dp"
            android:ems="16"
            android:maxLength="20"
            android:hint="@string/last_name" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_add_device_button"
            android:text="@string/save"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="140dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_add_device_button"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

</RelativeLayout>