<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_guard_theme"
    tools:context=".Views.HomeActivity">

    <ImageView
        android:id="@+id/GG_Shield_Clouds_Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1280dp"
        app:layout_constraintBottom_toTopOf="@+id/deviceDataList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gg_corner" />

    <!-- Welcome Message   -->
    <TextView
        android:id="@+id/welcomeUserMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:paddingVertical="8dp"
        android:paddingHorizontal="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/g_guard_font"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/devicesTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:paddingTop="100dp"
        android:paddingHorizontal="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/g_guard_font"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp" />

    <!-- Device ListView -->
    <ListView
        android:id="@+id/deviceDataList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="200dp"
        android:textStyle="normal" >
    </ListView>

    <!-- Add Device Button -->
    <Button
        android:id="@+id/addDeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/selected_toggle"
        android:text="@string/addDeviceButton"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="250dp" />

    <!-- Profile Button -->
    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="600dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/selected_toggle"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Log Out Button -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/selected_toggle"
        android:text="@string/logOut"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>