<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_guard_theme">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="250dp"
        android:layout_height="200dp" >

        <EditText
            android:id="@+id/sensorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:ems="16"
            android:maxLength="10"
            android:hint="@string/sensorname"
            android:autofillHints="name"
            android:inputType="textShortMessage"
            android:background="@drawable/input_styles"/>

        <RadioGroup
            android:id="@+id/sensorOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center" >

            <RadioButton
                android:id="@+id/typeOutput"
                android:layout_marginEnd="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>

            <RadioButton
                android:id="@+id/gasOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas"/>

        </RadioGroup>

        <android.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_add_device_button"
            android:text="@string/save"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="140dp"
            android:background="@drawable/button_custom"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"/>

        <android.widget.Button
            android:id="@+id/cancel_add_device_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:text="@android:string/cancel"
            android:textSize="14sp"
            android:background="@drawable/button_custom"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"/>

    </RelativeLayout>

</RelativeLayout>