<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_guard_theme"
    tools:context=".Views.MainActivity">
    <!-- App Title   -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:paddingVertical="8dp"
        android:paddingHorizontal="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/g_guard_font"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Login & Sign Up Switch -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingHorizontal="4dp"
        android:layout_marginBottom="440dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/switch_buttons_styles"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.widget.Button
            android:id="@+id/loginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/switch_button_on"
            android:paddingVertical="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/signUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/switch_button_off"
            android:paddingVertical="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/signup"
            android:textColor="@color/unfocused_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!--  Login Form: Input Fields & Login Button  -->
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404">

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="username"
            android:background="@drawable/input_styles"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="password"
            android:background="@drawable/input_styles"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp" />

        <TextView
            android:id="@+id/loginForgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/blue" />

        <android.widget.Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/auth_button_styles"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/gg_cloud_signup"
        android:layout_width="361dp"
        android:layout_height="146dp"
        android:visibility="visible"
        android:contentDescription="@string/gasGuardBannerDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/gg_corner"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>