<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_guard_theme"
    tools:context=".Views.SignupActivity">
    <!-- App Title   -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:paddingVertical="8dp"
        android:paddingHorizontal="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/g_guard_font"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Login & Sign Up Switch -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingHorizontal="4dp"
        android:layout_marginBottom="440dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/switch_buttons_styles"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.widget.Button
            android:id="@+id/loginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/switch_button_off"
            android:paddingVertical="10dp"
            android:paddingStart="45dp"
            android:paddingEnd="60dp"
            android:text="@string/login"
            android:textColor="@color/unfocused_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--  I switched button background from @drawable/switch_button_on to: @drawable/auth_button_styles -->
        <android.widget.Button
            android:id="@+id/signUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_button_styles"
            android:paddingVertical="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="40dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!--  Signup Form: Input Fields & Signup Button  -->
    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingVertical="8dp"
            android:paddingHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/input_styles"
            android:inputType="textPersonName"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingVertical="8dp"
            android:paddingHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/input_styles"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingVertical="8dp"
            android:paddingHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/input_styles"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:paddingVertical="8dp"
            android:paddingHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/input_styles"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <android.widget.Button
            android:id="@+id/signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/auth_button_styles"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/GG_Shield_Cloud_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form"
        app:srcCompat="@drawable/gg_corner" />
</androidx.constraintlayout.widget.ConstraintLayout>